# api/events.go
@@ -9,62 +9,6 @@ import (
 	"github.com/google/uuid"
 )
 
-func eventToApiEvent(event events.Event) Event {
-	return Event{
-		Id:                    &event.ID,
-		Name:                  event.Name,
-		Location:              locationToApiLocation(event.EventLocation),
-		StartTime:             event.StartTime,
-		EndTime:               event.EndTime,
-		RegistrationCloseTime: event.RegistrationCloseTime,
-	}
-}
-
-func apiEventToEvent(event Event) events.Event {
-	return events.Event{
-		ID:                    *event.Id,
-		Name:                  event.Name,
-		EventLocation:         apiLocationToLocation(event.Location),
-		StartTime:             event.StartTime,
-		EndTime:               event.EndTime,
-		RegistrationCloseTime: event.RegistrationCloseTime,
-	}
-}
-
-func locationToApiLocation(location events.Location) Location {
-	return Location{
-		Name:    location.Name,
-		Address: addressToApiAddress(location.LocAddress),
-	}
-}
-
-func apiLocationToLocation(location Location) events.Location {
-	return events.Location{
-		Name:       location.Name,
-		LocAddress: apiAddressToAddress(location.Address),
-	}
-}
-
-func addressToApiAddress(address events.Address) Address {
-	return Address{
-		City:       address.City,
-		Country:    address.Country,
-		PostalCode: address.PostalCode,
-		State:      address.State,
-		Street:     address.Street,
-	}
-}
-
-func apiAddressToAddress(address Address) events.Address {
-	return events.Address{
-		City:       address.City,
-		Country:    address.Country,
-		PostalCode: address.PostalCode,
-		State:      address.State,
-		Street:     address.Street,
-	}
-}
-
 func (a *API) GetEvents(ctx context.Context, request GetEventsRequestObject) (GetEventsResponseObject, error) {
 	limit := 10
 
@@ -108,14 +52,16 @@ func (a *API) GetEvents(ctx context.Context, request GetEventsRequestObject) (Ge
 }
 
 func (a *API) PostEvents(ctx context.Context, request PostEventsRequestObject) (PostEventsResponseObject, error) {
-	event := events.Event{
-		ID:                    uuid.New(),
-		Name:                  request.Body.Name,
-		EventLocation:         apiLocationToLocation(request.Body.Location),
-		StartTime:             request.Body.StartTime,
-		EndTime:               request.Body.EndTime,
-		RegistrationCloseTime: request.Body.RegistrationCloseTime,
+	if request.Body == nil {
+		return PostEvents400JSONResponse{
+			Code:    EmptyBody,
+			Message: "Must specify a JSON body in the request",
+		}, nil
 	}
+
+	id := uuid.New()
+	request.Body.Id = &id
+	event := apiEventToEvent(*request.Body)
 
 	err := a.db.CreateEvent(ctx, event)
 	if err != nil {
@@ -153,4 +99,84 @@ func (a *API) GetEventsId(ctx context.Context, request GetEventsIdRequestObject)
 	}
 
 	return GetEventsId200JSONResponse(eventToApiEvent(event)), nil
+}
+
+func eventToApiEvent(event events.Event) Event {
+	return Event{
+		Id:                    &event.ID,
+		Name:                  event.Name,
+		Location:              locationToApiLocation(event.EventLocation),
+		StartTime:             event.StartTime,
+		EndTime:               event.EndTime,
+		RegistrationCloseTime: event.RegistrationCloseTime,
+		RegistrationTypes:     slices.Map(event.RegistrationTypes, func(t events.RegistrationType) RegistrationType { return registrationTypeToApiRegistrationType(t) }),
+	}
+}
+
+func apiEventToEvent(event Event) events.Event {
+	return events.Event{
+		ID:                    *event.Id,
+		Name:                  event.Name,
+		EventLocation:         apiLocationToLocation(event.Location),
+		StartTime:             event.StartTime,
+		EndTime:               event.EndTime,
+		RegistrationCloseTime: event.RegistrationCloseTime,
+		RegistrationTypes:     slices.Map(event.RegistrationTypes, func(t RegistrationType) events.RegistrationType { return apiRegistrationTypeToRegistrationType(t) }),
+	}
+}
+
+func locationToApiLocation(location events.Location) Location {
+	return Location{
+		Name:    location.Name,
+		Address: addressToApiAddress(location.LocAddress),
+	}
+}
+
+func apiLocationToLocation(location Location) events.Location {
+	return events.Location{
+		Name:       location.Name,
+		LocAddress: apiAddressToAddress(location.Address),
+	}
+}
+
+func addressToApiAddress(address events.Address) Address {
+	return Address{
+		City:       address.City,
+		Country:    address.Country,
+		PostalCode: address.PostalCode,
+		State:      address.State,
+		Street:     address.Street,
+	}
+}
+
+func apiAddressToAddress(address Address) events.Address {
+	return events.Address{
+		City:       address.City,
+		Country:    address.Country,
+		PostalCode: address.PostalCode,
+		State:      address.State,
+		Street:     address.Street,
+	}
+}
+
+func registrationTypeToApiRegistrationType(t events.RegistrationType) RegistrationType {
+	switch t {
+	case events.BY_INDIVIDUAL:
+		return ByIndividual
+	case events.BY_TEAM:
+		return ByTeam
+	default:
+		panic("unknown registration type")
+	}
+}
+
+func apiRegistrationTypeToRegistrationType(t RegistrationType) events.RegistrationType {
+	switch t {
+	case ByIndividual:
+		return events.BY_INDIVIDUAL
+	case ByTeam:
+		return events.BY_TEAM
+	default:
+		panic("unknown registration type")
+	}
 }
