# events/registrationtype.go
@@ -1,0 +1,8 @@
+package events
+
+type RegistrationType int
+
+const (
+	BY_INDIVIDUAL RegistrationType = iota
+	BY_TEAM
+)
